Wed Jan  2 19:19:58 UTC 2013  Thomas Girard  <thomas.g.girard@free.fr>

        * ace/Service_Config.h: ACE_DYNAMIC_VERSIONED_SERVICE_DIRECTIVE
          fix when ACE_VERSIONED_SO=2. Because of '.' in the version,
          addition of prefix ACE_DLL_PREDIX and suffix ACE_DLL_SUFFIX
          is skipped, preventing ACE_DYNAMIC_VERSIONED_SERVICE_DIRECTIVE
          from working when ACE+TAO is built with versioned_so=2.

Thu Dec 27 09:18:39 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * docs/Download.html:
        * docs/bczar/bczar.html:
        * etc/index.html:
          Updated in preparation of next release

Thu Dec 27 10:00:49 CET 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.1.7 released.

Fri Dec 21 09:22:41 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * protocols/tests/HTBP/Reactor_Tests/run_test.pl:
        * protocols/tests/HTBP/Send_Large_Msg/run_test.pl:
        * protocols/tests/HTBP/Send_Recv_Tests/run_test.pl:
        * protocols/tests/HTBP/ping/run_test.pl:
          Check return value of spawn, if it fails directly exit the
          test run

Wed Dec 19 14:46:24 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_cegcc.GNU:
        * include/makeinclude/platform_g++_common.GNU:
        * include/makeinclude/platform_rtems.x_g++.GNU:
        * include/makeinclude/platform_vxworks6.2.GNU:
        * include/makeinclude/platform_vxworks6.3.GNU:
          Install tao_idl3_to_idl2 and tao_idl3_to_xmi into ACE_ROOT/bin
          to handle cross compilation in a flat layout more easily, this
          way we can use the same approach as tao_idl does

Mon Dec 17 20:53:22 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * ace/Message_Queue_Vx.inl:

          Updated for VxWorks 6.9 32-bit kernel mode.

Mon Dec 17 18:26:27 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
